feat-[166272337]: Forgot Password  … - Write unit tests - Document feature using swagger - Create route auth/reset_password?token=&email= - Create route auth/forgot_password - Generate and hash reset token - Setup email template - Validate new Password - Send reset and success email
[Finishes #166272337]
