# server/controllers/users.js
@@ -1,12 +1,25 @@
 import bcrypt from 'bcrypt';
+import { Op } from 'sequelize';
 import models from '@models';
-import { validateLogin, validateSignup } from '@validations/auth';
+import {
+  validateLogin,
+  validateSignup,
+  validatePasswordReset,
+  validateForgotPassword
+} from '@validations/auth';
 import Token from '@helpers/Token';
 import userExtractor from '@helpers/userExtractor';
-import { validationResponse, validateUniqueResponse } from '@helpers/validationResponse';
+import {
+  validationResponse,
+  validateUniqueResponse
+} from '@helpers/validationResponse';
 import Response from '@helpers/Response';
+import { sendForgotPasswordMail, sendResetSuccessMail } from '@helpers/mailer';
+import randomString from 'random-string';
 
-const { User, DroppedToken } = models;
+const {
+  User, DroppedToken
+} = models;
 
 /**
  * @exports UserController
@@ -15,14 +28,14 @@ const { User, DroppedToken } = models;
  * */
 class UserController {
   /**
-  * Create a new user
-  * @async
-  * @param  {object} req - Request object
-  * @param {object} res - Response object
-  * @param {object} next The next middleware
-  * @return {json} Returns json object
-  * @static
-  */
+   * Create a new user
+   * @async
+   * @param  {object} req - Request object
+   * @param {object} res - Response object
+   * @param {object} next The next middleware
+   * @return {json} Returns json object
+   * @static
+   */
   static async create(req, res, next) {
     try {
       const userDetails = await validateSignup(req.body);
@@ -35,7 +48,13 @@ class UserController {
       await user.createProfile();
 
       const token = await Token.create(payload);
-      return res.status(201).json({ status: 'success', message: 'User created successfully', user: userExtractor(user, token) });
+      return res
+        .status(201)
+        .json({
+          status: 'success',
+          message: 'User created successfully',
+          user: userExtractor(user, token)
+        });
     } catch (err) {
       if (err.isJoi && err.name === 'ValidationError') {
         return res.status(400).json({
@@ -55,14 +74,14 @@ class UserController {
   }
 
   /**
-  * Login and Authenticate user.
-  * @async
-  * @param  {object} req - Request object
-  * @param {object} res - Response object
-  * @param {object} next The next middleware
-  * @return {json} Returns json object
-  * @static
-  */
+   * Login and Authenticate user.
+   * @async
+   * @param  {object} req - Request object
+   * @param {object} res - Response object
+   * @param {object} next The next middleware
+   * @return {json} Returns json object
+   * @static
+   */
   static async login(req, res, next) {
     try {
       const logindetails = await validateLogin(req.body);
@@ -82,7 +101,13 @@ class UserController {
         email: user.email
       };
       const token = await Token.create(payload);
-      return res.status(200).json({ status: 'success', message: 'User successfully logged in', user: userExtractor(user, token) });
+      return res
+        .status(200)
+        .json({
+          status: 'success',
+          message: 'User successfully logged in',
+          user: userExtractor(user, token)
+        });
     } catch (err) {
       if (err.isJoi && err.name === 'ValidationError') {
         return res.status(400).json({
@@ -95,18 +120,21 @@ class UserController {
   }
 
   /**
-   * Signuout user and blacklist tokens
-   * @param {object} req
-   * @param {object} res
-   * @param {object} next
-   * @returns {object} res message
-   * */
+ * Signuout user and blacklist tokens
+ *
+ * @static
+ * @param {*} req
+ * @param {*} res
+ * @returns {json} returns json object
+ * @memberof UserController logout
+ */
   static async logout(req, res) {
     const token = await Token.getToken(req);
     try {
       await DroppedToken.create({ token });
       return res.status(201).json({
-        status: 201, message: 'You are now logged out'
+        status: 201,
+        message: 'You are now logged out'
       });
     } catch (error) {
       return Response.error(res, 401, 'You are not logged in');
@@ -114,14 +142,14 @@ class UserController {
   }
 
   /**
- * Get users and their corresponding profiles
- * @async
- * @param {object} req - Request object
- * @param {object} res - Response object
- * @param {object} next The next middleware
- * @return {json} Returns json object
- * @static
- */
+   * Get users and their corresponding profiles
+   * @async
+   * @param {object} req - Request object
+   * @param {object} res - Response object
+   * @param {object} next The next middleware
+   * @return {json} Returns json object
+   * @static
+   */
   static async getUsers(req, res, next) {
     try {
       const users = await User.findAll({
@@ -134,18 +162,122 @@ class UserController {
             model: models.Profile,
             as: 'profile',
             attributes: ['firstname', 'lastname', 'bio', 'avatar', 'location']
-          },
-        ],
+          }
+        ]
       });
 
-      return res.status(200)
-        .send({
-          status: 'success',
-          message: 'Users and corresponding profiles retrieved successfully',
-          payload: users
-        });
+      return res.status(200).send({
+        status: 'success',
+        message: 'Users and corresponding profiles retrieved successfully',
+        payload: users
+      });
     } catch (error) {
       next(error);
+    }
+  }
+
+  /**
+   * Forgot Password
+   * @async
+   * @param  {object} req - Request object
+   * @param {object} res - Response object
+   * @param {object} next
+   * @return {json} Returns json object
+   * @static
+   */
+  static async forgotPassword(req, res, next) {
+    try {
+      const { email } = await validateForgotPassword(req.body);
+
+      const user = await User.findOne({ where: { email } });
+
+      if (!user) return Response.error(res, 404, 'User does not exist');
+
+      // Check if the account is active
+      if (!user.active) return Response.error(res, 401, 'Your account is not verified');
+
+      const token = randomString({ length: 40 });
+      const resetDetails = {
+        resetPasswordToken: token,
+        resetPasswordExpiry: Date.now() + 3600000 // 1 hour from now
+      };
+
+      const userResetToken = await user.getResetToken();
+      if (userResetToken) {
+        await userResetToken.update(resetDetails);
+      } else {
+        await user.createResetToken(resetDetails);
+      }
+
+      await sendForgotPasswordMail(token, email);
+
+      return Response.success(res, 200, { token }, 'A reset token has been sent to your email address');
+    } catch (err) {
+      if (err.isJoi && err.name === 'ValidationError') {
+        return res.status(400).json({
+          status: 400,
+          errors: validationResponse(err)
+        });
+      }
+      next(err);
+    }
+  }
+
+  /**
+   * Reset Password
+   * @async
+   * @param  {object} req - Request object
+   * @param {object} res - Response object
+   * @param {object} next
+   * @return {json} Returns json object
+   * @static
+   */
+  static async resetPassword(req, res, next) {
+    try {
+      // Verify the password and confirm password
+      const newPassword = await validatePasswordReset(req.body);
+
+      const { password } = newPassword;
+      const { token, email } = req.query;
+
+      if (!token || !email) return Response.error(res, 400, 'Please use a valid reset link');
+
+      // Get the user
+      const user = await User.findOne({ where: { email } });
+      if (!user) return Response.error(res, 404, 'User does not exist');
+
+      // Check if the token is in the database
+      const tokenDetails = await user.getResetToken({
+        where: {
+          resetPasswordExpiry: {
+            [Op.gt]: Date.now()
+          }
+        }
+      });
+
+      // Check if the token is valid
+      if (!tokenDetails) return Response.error(res, 401, 'Invalid Token');
+
+      const match = await bcrypt.compare(token, tokenDetails.get().resetPasswordToken);
+      if (!match) return Response.error(res, 401, 'Invalid Token');
+
+
+      // Update password
+      await user.update({ password });
+      await tokenDetails.destroy();
+
+      // Send success email
+      await sendResetSuccessMail(email);
+
+      return Response.success(res, 200, {}, 'Password reset successful');
+    } catch (err) {
+      if (err.isJoi && err.name === 'ValidationError') {
+        return res.status(400).json({
+          status: 400,
+          errors: validationResponse(err)
+        });
+      }
+      next(err);
     }
   }
 }
