# server/models/passwordreset.js
@@ -1,10 +1,16 @@
+import bcrypt from 'bcrypt';
+
+const salt = process.env.SALT || 5;
+// eslint-disable-next-line radix
+const SALT_ROUNDS = parseInt(salt);
+
 module.exports = (sequelize, DataTypes) => {
   const PasswordReset = sequelize.define('PasswordReset', {
     userId: {
       type: DataTypes.UUID,
       allowNull: false
     },
-    resetPasswordoken: {
+    resetPasswordToken: {
       type: DataTypes.STRING,
       allowNull: true,
     },
@@ -12,7 +18,12 @@ module.exports = (sequelize, DataTypes) => {
       type: DataTypes.DATE,
       allowNull: true
     }
-  }, {});
+  }, {
+    hooks: {
+      beforeCreate: token => PasswordReset.hashToken(token),
+      beforeUpdate: token => PasswordReset.hashToken(token)
+    }
+  });
 
   PasswordReset.associate = (models) => {
     const { User } = models;
@@ -20,6 +31,11 @@ module.exports = (sequelize, DataTypes) => {
     PasswordReset.belongsTo(User, {
       foreignKey: 'userId'
     });
+  };
+
+  PasswordReset.hashToken = async (token) => {
+    const hash = await bcrypt.hash(token.dataValues.resetPasswordToken, SALT_ROUNDS);
+    await token.setDataValue('resetPasswordToken', hash);
   };
 
   return PasswordReset;
