# swagger.yaml
@@ -152,28 +152,6 @@ paths:
           description: "Invalid Token Provided"
       security:
       - api_key: []
-  /profiles/{username}:
-    get:
-      tags:
-      - "Profile"
-      summary: "User Profile details"
-      description: "Returns the profile details of a user"
-      operationId: "getProfile"
-      produces:
-      - "application/json"
-      parameters:
-        - in: path
-          name: username
-          required: false
-          type: string
-          description: "User's username"
-      responses:
-        200:
-          description: "success"
-          schema:
-            $ref: "#/definitions/ApiResponse"
-        404:
-          description: "fail"
   /auth/login:
     post:
       tags:
@@ -207,10 +185,298 @@ paths:
             $ref: "#/definitions/ApiResponse"
         400:
           description: "Invalid email/password supplied"
+  /auth/forgot_password:
+    post:
+      tags:
+      - "Auth"
+      summary: "Forgot Password"
+      description: "Send reset token to user email"
+      operationId: "forgotPasswordId"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "email"
+        in: "formData"
+        description: "The email to reset password"
+        required: true
+        type: "string"
+        format: "email"
+        minLength: 5
+        maxLength: 255
+      responses:
+        200:
+          description: "Reset email sent"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "Invalid email supplied"
+        404:
+          description: "User not found"
+  /auth/reset_password:
+    post:
+      tags:
+      - "Auth"
+      summary: "Reset Password"
+      description: "Reset the user password and send success email"
+      operationId: "resetPasswordId"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "password"
+        in: "formData"
+        description: "New Password"
+        required: true
+        type: "string"
+        format: "password"
+        minLength: 5
+        maxLength: 255
+      - name: "confirmPassword"
+        in: "formData"
+        description: "Confirm Password"
+        required: true
+        type: "string"
+        format: "password"
+        minLength: 5
+        maxLength: 255
+      - name: "email"
+        in: "query"
+        description: "The email to reset password"
+        required: true
+        type: "string"
+        format: "email"
+        minLength: 5
+        maxLength: 255
+      - name: "token"
+        in: "query"
+        description: "Reset token"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 5
+        maxLength: 255
+      responses:
+        200:
+          description: "Password has been reset"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "Invalid password supplied"
+        404:
+          description: "User not found"
+        401:
+          description: "Invalid token"
+  /profiles/{username}:
+    get:
+      tags:
+      - "Profile"
+      summary: "User Profile details"
+      description: "Returns the profile details of a user"
+      operationId: "getProfile"
+      produces:
+      - "application/json"
+      parameters:
+        - in: path
+          name: username
+          required: false
+          type: string
+          description: "User's username"
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        404:
+          description: "fail"
+  /articles:
+    post:
+      tags:
+      - "article"
+      summary: "Create article"
+      description: "Creates a new article in the application"
+      operationId: "createArticle"
+      produces:
+      - "application/json"
+      - "application/xml"
+      parameters:
+      - in: "formData"
+        name: "title"
+        description: "The article title"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 4
+        maxLength: 500
+      - in: "formData"
+        name: "body"
+        description: "The article body"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 4
+      - in: "formData"
+        name: "image"
+        description: "The image url"
+        required: false
+        type: "string"
+        format: "text"
+      responses:
+        200:
+          description: "Article created successfully"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "Title/ body is not allowed to be empty"
+      security:
+      - api_key: []
+    get:
+      tags:
+      - "article"
+      summary: "user can get all articles"
+      description: "Returns all available articles"
+      operationId: "getArticles"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "fail"
+    delete:
+      tags:
+      - "article"
+      summary: "user can delete an articles"
+      description: "Deletes an article in application"
+      operationId: "deleteArticles"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "fail"
+      security:
+      - api_key: []
+    put:
+      tags:
+      - "article"
+      summary: "Update article"
+      description: "Updates an article in the application"
+      operationId: "updateArticle"
+      produces:
+      - "application/json"
+      - "application/xml"
+      parameters:
+      - in: "formData"
+        name: "title"
+        description: "The article title"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 4
+        maxLength: 500
+      - in: "formData"
+        name: "body"
+        description: "The article body"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 4
+      - in: "formData"
+        name: "image"
+        description: "The image url"
+        required: false
+        type: "string"
+        format: "text"
+      responses:
+        200:
+          description: "Article updated successfully"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "Title/ body is not allowed to be empty"
+  /articles/{slug}:
+    get:
+      tags:
+      - "article"
+      summary: "user can get all articles"
+      description: "Returns all available articles"
+      operationId: "getArticles"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "fail"
+    delete:
+      tags:
+      - "article"
+      summary: "user can delete an articles"
+      description: "Deletes an article in application"
+      operationId: "deleteArticles"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "fail"
+      security:
+      - api_key: []
+    put:
+      tags:
+      - "article"
+      summary: "Update article"
+      description: "Updates an article in the application"
+      operationId: "updateArticle"
+      produces:
+      - "application/json"
+      - "application/xml"
+      parameters:
+      - in: "formData"
+        name: "title"
+        description: "The article title"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 4
+        maxLength: 500
+      - in: "formData"
+        name: "body"
+        description: "The article body"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 4
+      - in: "formData"
+        name: "image"
+        description: "The image url"
+        required: false
+        type: "string"
+        format: "text"
+      responses:
+        200:
+          description: "Article updated successfully"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "Title/ body is not allowed to be empty"
   /articles/{slug}/rate:
     post:
       tags:
-      - "articles"
+      - "article"
       summary: "Rate Article"
       description: "Rates an article"
       operationId: "rateArticle"
@@ -276,6 +542,17 @@ definitions:
       id:
         type: "integer"
         format: "int64"
+  Article:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      title:
+        type: "string"
+      body:
+        type: "string"
+      image:
       userId:
         type: "string"
       bio:
@@ -300,6 +577,21 @@ definitions:
         format: "uuid"
       ratings:
         type: "integer"
+  PasswordReset:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      userId:
+        type: "string"
+        format: "uuid"
+      resetPasswordToken:
+        type: "string"
+        format: "text"
+      resetPasswordExpiry:
+        type: "string"
+        format: "date-time"
   ApiResponse:
     type: "object"
     properties:
